syntax = "proto2";


message TCommandLineArgs {
    optional string Endpoint = 1 [default="ydb-ru.yandex.net:2135"];
    optional string Database = 2 [default="/ru/home/lyalchenko/mydb"];
    optional string Table = 3 [default="ttsaudio"];
    required string Action = 4;
    optional int64 Ttl = 5 [default=300];

    optional int64 ShootThreads = 6 [default=1];
    optional int64 ShootPeriod = 7 [default=0];
    optional int64 ShootRequests = 8 [default=1000];
}
